compiler/fir/raw-fir/psi2fir/testData/rawBuilder/declarations/invalidCode/annotatedObjectAsFunctionBody.kt
// ISSUE: KT-81687

annotation class Anno

fun foo() =

@Anno
object Annotated { }
